# x16-emulator

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SDL_FontCache.c  SDL_FontCache.h  SID.PRG  appveyor.yml  audio.c  audio.h  build_rom_debug.sh  conanfile.py  controller.c  controller.h  debugger.c  debugger.h  disasm.c  disasm.h  echochar.c  echochar.h  fake6502.c  fake6502.h  glue.h  i2c.c  i2c.h  icon.c  icon.h  icon.xcf  io.c  io.h  javascript_interface.c  joystick.c  joystick.h  keyboard.c  (+46 more)
.github/workflows/: build.yml
assets/: x16emu.ini
cmake/: FindSDL2.cmake  Findpandoc.cmake
cmake/toolchains/: mingw.cmake
conan_profiles/: emsdk  emsdk_win  mingw8_win
cpu/: 65c02.h  65c02.opcodes  README  buildtables.py  extract.py  fake6502.c  fake6502.h  instructions.h  mnemonics.h  modes.h  support.h  tables.h  tables.h.org
examples/: aritm-x16.bas  maze.bas  snake.bas
makeprg/: gentokenlist.py  makeprg.py  test.bas  test.prg
package/: package.sh  patch1.diff
socketuart/: socketclient.c  socketclient.h  uartqueue.c  uartqueue.h
src/: audio.c  audio.h  debugger.c  debugger.h  disasm.c  disasm.h  glue.h  i2c.c  i2c.h  icon.c  ieee.c  ieee.h  javascript_interface.c  joystick.c  joystick.h  keyboard.c  keyboard.h  loadsave.c  loadsave.h  main.c  memory.c  memory.h  ps2.c  ps2.c.bak  ps2.h  ps2.h.bak  readdir.h  rendertext.c  rom_symbols.h  rtc.c  rtc.h  sdcard.h  serial.c  serial.h  smc.c  smc.h  spi.c  test.py  testbench.c  testbench.h  (+17 more)
src/console/: DT_drawtext.c  DT_drawtext.h  SDL_console.c  SDL_console.h  internal.c  internal.h  split.c  split.h
src/cpu/: 6502.opcodes  65c02.h  65c02.opcodes  buildtables.py  cpu.c  cpu.h  fake6502.c  fake6502.h  instructions.h  support.h  tables.h  w65c02s.h
src/debugger/: breakpoints.h  commands.c  commands.h  debugger.c  debugger.h  disasm.c  disasm.h  registers.h  rendertext.c  rendertext.h  symbols.c  symbols.h  version.h
src/iniparser/: dictionary.c  iniparser.c  iniparser.h  utils.c  utils.h
testbench/: example.py  selftest.py  test.py  testbench.py
tools/: embed_c.py
webassembly/: WebAssembly.md  chickenlips16emu-template.html  helper.js  main.js  styles.css  x16emu-template.html
xcode/Frameworks/JoyStickView/JoyStickView.xcodeproj/xcuserdata/mpe18.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/Frameworks/SDL/Xcode-iOS/SDL/SDL.xcodeproj/xcuserdata/mpe18.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/Frameworks/SDL/Xcode/SDL/SDL-Mac.xcodeproj/xcuserdata/mpe18.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/X16/: Info.plist  main_temp.c
xcode/X16/CommanderX16.xcodeproj/: project.pbxproj
xcode/X16/CommanderX16.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/X16/CommanderX16.xcodeproj/project.xcworkspace/xcuserdata/mpe18.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/X16/CommanderX16.xcodeproj/xcshareddata/xcschemes/: Copy of CommanderX16.xcscheme  Optimised No debug CommanderX16.xcscheme  x16emu.xcscheme
xcode/X16/CommanderX16.xcodeproj/xcuserdata/mpe18.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode/X16/CommanderX16/Images.xcassets/AppIcon.appiconset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/A.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/DefaultBase.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/FancyBase.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/FancyHandle.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-cmd-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-enter-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-esc-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f1-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f10-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f11-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f12-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f2-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f3-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f4-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f5-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f6-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f7-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f8-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-f9-key-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-game-controller-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-joystick-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-keyboard-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-restart-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-select-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/Icons/icons8-start-500.imageset/: Contents.json
xcode/X16/CommanderX16/Images.xcassets/LaunchImage.launchimage/: Contents.json
xcode/X16/iOS/: GameControlViewController.h  GameControlViewController.m  GameControlViewController.xib  InputViewController.h  InputViewController.m  InputViewController.xib  JoystickController.swift  MessageObserver.h  MessageObserver.m  SettingsViewController.h  SettingsViewController.m  SettingsViewController.xib  ios_functions.c  ios_functions.h  ios_functions.m
xcode/X16/iOS Settings/: GameControlViewController.m  SettingsViewController.m  SettingsViewController.xib
